<resources>
    <string name="app_name">BandUtils</string>
    <string name="title_activity_controlcenter">BandUtils</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_quit">Quit</string>
    <string name="action_donate">Donate</string>
    <string name="controlcenter_fetch_activity_data">Synchronize</string>
    <string name="controlcenter_find_device">Find lost Device</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_connect">Connect</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="controlcenter_delete_device">Delete Device</string>
    <string name="controlcenter_delete_device_name">Delete %1$s</string>
    <string name="controlcenter_delete_device_dialogmessage">This will delete the device and all associated data!</string>
    <string name="controlcenter_navigation_drawer_open">Open navigation drawer</string>
    <string name="controlcenter_navigation_drawer_close">Close navigation drawer</string>
    <string name="controlcenter_snackbar_need_longpress">Long press the card to disconnect</string>
    <string name="controlcenter_snackbar_disconnecting">Disconnecting</string>
    <string name="controlcenter_snackbar_connecting">Connecting</string>
    <string name="controlcenter_snackbar_requested_screenshot">Taking a screenshot of the device</string>
    <string name="controlcenter_calibrate_device">Calibrate Device</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate system weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate system weather app</string>
    <string name="appmanager_weather_install_provider">Install the weather notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="title_activity_appblacklist">Notification blacklist</string>
    <string name="blacklist_all_for_notifications">Blacklist all for notifications</string>
    <string name="whitelist_all_for_notifications">Whitelist all for notifications</string>
    <string name="title_activity_calblacklist">Blacklisted Calendars</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install firmware %s instead of the one currently on your Mi Band.</string>
    <string name="fw_upgrade_notice_amazfitbip">You are about to install the %s firmware on your Amazfit Bip.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor">You are about to install the %s firmware on your Amazfit Cor.\n\nPlease make sure to install the .fw file, and after that the .res file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband3">You are about to install the %s firmware on your Mi Band 3.\n\nPlease make sure to install the .fw file, and after that the .res file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nUNTESTED, MAY BRICK YOUR DEVICE, PROCEED AT YOUR OWN RISK!</string>
    <string name="fw_multi_upgrade_notice">You are about to install the %1$s and %2$s firmware, instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with BandUtils.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with BandUtils.\n\nYou are DISCOURAGED from flashing it onto your Mi Band!"</string>
    <string name="miband_firmware_suggest_whitelist">If you still want to proceed and things continue to work properly afterwards, please tell the BandUtils developers to whitelist the %s firmware version</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect to device when Bluetooth turned on</string>
    <string name="pref_title_general_autostartonboot">Start automatically</string>
    <string name="pref_title_general_autoreconnect">Reconnect automatically</string>
    <string name="pref_title_audio_player">Preferred Audioplayer</string>
    <string name="pref_default">Default</string>
    <string name="pref_title_charts_swipe">Enable left/right swipe in the charts activity</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to device when connecting, and when time or time zone changes on Android</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_minimize_priority">Hide the BandUtils notification</string>
    <string name="pref_summary_minimize_priority_off">The icon in the status bar and the notification in the lockscreen are shown</string>
    <string name="pref_summary_minimize_priority_on">The icon in the status bar and the notification in the lockscreen are hidden</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_repetitions">Repetitions</string>
    <string name="pref_title_notifications_call">Phone Calls</string>
    <string name="pref_title_notifications_sms">SMS</string>
    <string name="pref_title_notifications_pebblemsg">Pebble Messages</string>
    <string name="pref_summary_notifications_pebblemsg">Support for applications which send notifications to the Pebble via PebbleKit.</string>
    <string name="pref_title_notifications_generic">Generic notification support</string>
    <string name="pref_title_whenscreenon">…also when screen is on</string>
    <string name="pref_title_notification_filter">Do Not Disturb</string>
    <string name="pref_summary_notification_filter">Stop unwanted notifications from being sent in Do Not Disturb mode</string>
    <string name="pref_title_transliteration">Transliteration</string>
    <string name="pref_summary_transliteration">Enable this if your device has no support for your language\'s font</string>
    <string name="always">Always</string>
    <string name="when_screen_off">When screen is off</string>
    <string name="never">Never</string>
    <string name="pref_header_privacy">Privacy</string>
    <string name="pref_title_call_privacy_mode">Call privacy mode</string>
    <string name="pref_call_privacy_mode_off">Display name and number</string>
    <string name="pref_call_privacy_mode_name">Hide name but display number</string>
    <string name="pref_call_privacy_mode_number">Hide number but display name</string>
    <string name="pref_call_privacy_mode_complete">Hide name and number</string>
    <string name="pref_title_weather">Weather</string>
    <string name="pref_title_weather_location">Weather location (CM/LOS)</string>
    <string name="pref_blacklist">Blacklist Apps</string>
    <string name="pref_blacklist_calendars">Blacklist Calendars</string>
    <string name="pref_header_cannned_messages">Canned messages</string>
    <string name="pref_title_canned_replies">Replies</string>
    <string name="pref_title_canned_reply_suffix">Common suffix</string>
    <string name="pref_title_canned_messages_dismisscall">Call Dismissal</string>
    <string name="pref_title_canned_messages_set">Update on Pebble</string>
    <string name="pref_header_development">Developer options</string>
    <string name="pref_title_development_miaddr">Mi Band address</string>
    <string name="pref_title_pebble_settings">Pebble settings</string>
    <string name="pref_header_activitytrackers">Activity trackers</string>
    <string name="pref_title_pebble_activitytracker">Preferred activity tracker</string>
    <string name="pref_title_pebble_sync_health">Sync Pebble Health</string>
    <string name="pref_title_pebble_sync_misfit">Sync Misfit</string>
    <string name="pref_title_pebble_sync_morpheuz">Sync Morpheuz</string>
    <string name="pref_title_enable_outgoing_call">Support outgoing calls</string>
    <string name="pref_summary_enable_outgoing_call">Disabling this will also stop the Pebble 2/LE to vibrate on outgoing calls</string>
    <string name="pref_title_enable_pebblekit">Allow 3rd party Android App access</string>
    <string name="pref_summary_enable_pebblekit">Enable experimental support for Android Apps using PebbleKit</string>
    <string name="pref_header_pebble_timeline">Pebble timeline</string>
    <string name="pref_title_sunrise_sunset">Sunrise and sunset</string>
    <string name="pref_summary_sunrise_sunset">Send sunrise and sunset times based on the location to the Pebble timeline</string>
    <string name="pref_title_enable_calendar_sync">Sync calendar</string>
    <string name="pref_summary_enable_calendar_sync">Send calendar events to the timeline</string>
    <string name="pref_title_autoremove_notifications">Autoremove dismissed notifications</string>
    <string name="pref_summary_autoremove_notifications">Notifications are automatically removed from the Pebble when dismissed from the Android device</string>
    <string name="pref_title_pebble_privacy_mode">Privacy mode</string>
    <string name="pref_pebble_privacy_mode_off">Normal notifications</string>
    <string name="pref_pebble_privacy_mode_content">Shift the notification text off-screen</string>
    <string name="pref_pebble_privacy_mode_complete">Show only the notification icon</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_title_location_aquire">Acquire location</string>
    <string name="pref_title_location_latitude">Latitude</string>
    <string name="pref_title_location_longitude">Longitude</string>
    <string name="pref_title_location_keep_uptodate">Keep location updated</string>
    <string name="action_db_management">Database management</string>
    <string name="sub_header">관리</string>
    <string name="footer_header">정보</string>
    <string name="action_licenses">라이센스</string>
    <string name="action_about">앱 정보</string>
    <string name="action_check_db">생활 데이터 확인</string>
    <string name="food_check_db">식품 데이터 검색</string>
    <string name="action_storage">데이터 저장소 관리</string>
    <string name="action_user_information">내 정보</string>
</resources>